# Air-VINS

./: .gitignore  AGNET.md  BA_process.md  LOG.md  VINS_BA.md
camera_models/: CMakeLists.txt
config/: vins_rviz_config.rviz
config/euroc/: euroc_stereo_config.yaml  euroc_stereo_imu_config.yaml
config/nus_thermal/: left.yaml  nus_thermal_stereo_config.yaml  nus_thermal_stereo_imu_config.yaml  right.yaml
config/realsense_d435i/: realsense_stereo_imu_config.yaml
deepFeature/include/: plnet.h  point_matcher.h
deepFeature/src/: plnet.cpp  point_matcher.cc
global_fusion/: CMakeLists.txt
loop_fusion/: CMakeLists.txt
loop_fusion/scripts/: build_netvlad_engine.sh
loop_fusion/src/: keyframe.cpp  keyframe.h  pose_graph.cpp  pose_graph.h  pose_graph_node.cpp
loop_fusion/src/netvlad/: netvlad_trt.cpp  netvlad_trt.h
loop_fusion/src/vprnet/: vprnet.cpp  vprnet.h
output/: README.md  ResNet50_512_eigenplaces.onnx  plnet_s1.engine  superpoint_v1_sim_int32.engine  vio.csv  vio_loop.csv
src/vins/: LOG.md
vins_estimator/: CMakeLists.txt
vins_estimator/launch/: nus_thermal_stereo.launch  nus_thermal_stereo_imu.launch  nus_thermal_stereo_imu_lc.launch
vins_estimator/src/: KITTIGPSTest.cpp  KITTIOdomTest.cpp  nus_thermal_publisher copy.cpp  nus_thermal_publisher.cpp  rosNodeTest.cpp
vins_estimator/src/estimator/: estimator.cpp  estimator.h  feature_manager.cpp  feature_manager.h  parameters.cpp  parameters.h
vins_estimator/src/factor/: line_parameterization.cpp  line_parameterization.h  line_projection_factor.cpp  line_projection_factor.h
vins_estimator/src/featureTracker/: deep_feature.cpp  deep_feature.h  feature_tracker.cpp  feature_tracker.h
vins_estimator/src/featureTracker/deepFeature/include/: read_configs.h  super_point.h  utils.h
vins_estimator/src/featureTracker/deepFeature/src/: light_glue.cpp  point_matcher.cc  super_glue.cpp  super_point.cpp  utils.cc
vins_estimator/src/initial/: initial_alignment.h
vins_estimator/src/manager/: feature_manager.cpp  feature_manager.h  feature_types.h  line_feature_manager.cpp  line_feature_manager.h  point_feature_manager.cpp  point_feature_manager.h
vins_estimator/src/utility/: CameraPoseVisualization.cpp  CameraPoseVisualization.h  frameObs.h  line_geometry.cpp  line_geometry.h  localmap_frame.h  mapline.cpp  mapline.h  mappoint.cpp  mappoint.h  ros_utils.h  visualization.cpp  visualization.h
